"Hight of table th: make the height of first load and update table to the same size" fixed; Removed the Fixed First Column Scoller by forcing the css style 'overflow-y' to 'hidden'; Add conditions for bar charts based on different criterias

--- a/portal/src/main/webapp/css/study-view.css
+++ b/portal/src/main/webapp/css/study-view.css
@@ -189,7 +189,7 @@ stroke: none;
 fill: #ccc;
 }
 .dc-chart .pie-slice {
-fill: black;
+fill: white;
 font-size: 10px;
 cursor: pointer;
 }
